--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,6 @@
 {
-    "version": 2,
     "buildCommand": "cd client && npm install && npm run build",
     "outputDirectory": "client/dist",
-    "installCommand": "npm install && cd client && npm install",
-    "rewrites": [
-        {
-            "source": "/api/(.*)",
-            "destination": "/api/index.js"
-        }
-    ],
-    "functions": {
-        "api/index.js": {
-            "memory": 1024,
-            "maxDuration": 30
-        }
-    }
+    "installCommand": "echo 'Installing in build command'",
+    "framework": "vite"
 }
