Update production API URL to Render deployment

--- a/client/.env.production
+++ b/client/.env.production
@@ -1,4 +1,4 @@
 # Production environment variables for Vercel
-# Replace YOUR_RENDER_APP_NAME with your actual Render app URL after deploying backend
+# Backend deployed on Render
 
-VITE_API_URL=https://YOUR_RENDER_APP_NAME.onrender.com/api
+VITE_API_URL=https://fitnesstracker-2qax.onrender.com/api
